[package]
name = "doh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
tabled = "0.10.0"
futures = "0.3.27"
surge-ping = "0.7.3"
rand = "0.8.5"
